--- a/RetailCorrector.Parser.csproj
+++ b/RetailCorrector.Parser.csproj
@@ -5,7 +5,20 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Platforms>AnyCPU</Platforms>
+    <RootNamespace>RetailCorrector</RootNamespace>
+    <Version>0.1</Version>
+    <Authors>Ornaras</Authors>
+    <AssemblyName>RetailCorrector.Parser</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RetailCorrector.Data\RetailCorrector.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="RetailCorrector.ParserConstants">
+      <Static>True</Static>
+    </Using>
+  </ItemGroup>
 
 </Project>
