--- a/RetailCorrector.Source.csproj
+++ b/RetailCorrector.Source.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>RetailCorrector</RootNamespace>
     <Version>0.1</Version>
     <Authors>Ornaras</Authors>
-    <AssemblyName>RetailCorrector.Parser</AssemblyName>
+    <AssemblyName>RetailCorrector.Source</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
