Обновление файла проекта

--- a/RetailCorrector.Source.csproj
+++ b/RetailCorrector.Source.csproj
@@ -8,6 +8,7 @@
     <Version>1.0</Version>
     <Authors>Ornaras</Authors>
     <AssemblyName>RetailCorrector.Source</AssemblyName>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
